# YandexOptimizationRound

./: CMakeLists.txt  README.md  input.txt  main.cpp
YaBackup7_03__5_41/: CMakeLists.txt  input.txt  main.cpp  output.txt
big-tests/: 0.in  1.in  10.in  100.in  1000.in  1001.in  1002.in  1003.in  1004.in  1005.in  1006.in  1007.in  1008.in  1009.in  101.in  1010.in  1011.in  1012.in  1013.in  1014.in  1015.in  1016.in  1017.in  1018.in  1019.in  102.in  1020.in  1021.in  1022.in  1023.in  1024.in  1025.in  1026.in  1027.in  1028.in  1029.in  103.in  1030.in  1031.in  1032.in  (+2960 more)
manual-tests/: 0.in
small-tests/: 1.in  10.in  11.in  12.in  13.in  14.in  15.in  16.in  17.in  18.in  19.in  2.in  20.in  21.in  22.in  23.in  24.in  25.in  26.in  27.in  28.in  29.in  3.in  30.in  31.in  32.in  33.in  34.in  35.in  36.in  37.in  38.in  39.in  4.in  40.in  41.in  42.in  43.in  44.in  45.in  (+9 more)
